--- a/Source/WPF/MyMoney/View Selectors/CategoriesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/CategoriesControl.xaml
@@ -8,7 +8,7 @@
              xmlns:localData="clr-namespace:Walkabout.Data"  
              xmlns:help="clr-namespace:Walkabout.Help"
              Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
-             help:HelpService.HelpKeyword="Categories"
+             help:HelpService.HelpKeyword="Basics/Categories/"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
