--- a/Source/WPF/MyMoney/Views/AliasesView.xaml
+++ b/Source/WPF/MyMoney/Views/AliasesView.xaml
@@ -7,7 +7,7 @@
              xmlns:c="clr-namespace:Walkabout.WpfConverters"
              xmlns:views="clr-namespace:Walkabout.Views"
              xmlns:help="clr-namespace:Walkabout.Help"
-             help:HelpService.HelpKeyword="Aliases"
+             help:HelpService.HelpKeyword="Basics/Aliases/"
              xmlns:ui="http://schemas.modernwpf.com/2019"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
