--- a/Source/WPF/MyMoney/MainWindow.xaml
+++ b/Source/WPF/MyMoney/MainWindow.xaml
@@ -174,6 +174,7 @@
               <MenuItem x:Name="MenuFixSecurities" Header="Remove _Duplicate Securities" Click="MenuRemoveDuplicateSecurities_Click"/>
               <MenuItem x:Name="MenuFixPayees" Header="Remove Duplicate _Payees" Click="MenuRemoveDuplicatePayees_Click"/>
               <MenuItem x:Name="MenuGCCollect" Header="_GC.Collect" Click="MenuGCCollect_Click"/>
+              <MenuItem x:Name="MenuEnvironment" Header="_Environment" Click="MenuEnvironment_Click"/>
             </MenuItem>
           </MenuItem>
 
